<resources>
    <string name="app_name">PicS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_login_in">Login in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="register_hint">Don\'t have an account?Sign up Now</string>
    <string name="login_hint">Already have an account?Login in Now</string>

    <string name="user_info_location">Live in Someplace:)</string>
    <string name="user_info">User info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick_name">Nick Name</string>
    <string name="sex">Sex</string>
    <string name="residence">Residence</string>
    <string name="birthday">Birthday</string>
    <string name="followers">Followers</string>
    <string name="grade">Grade</string>
    <string name="connections">Connections</string>
    <string name="personal_intro">Personal Intro</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_avatar">Change avatar</string>
    <string name="action_change_background_image">Change Background Image</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Cancel Follow</string>
    

    <!-- 选取图片菜单 -->
    <string name="choose_picture">Select A Picture</string>
    <string name="action_mask">Mask</string>
    <string name="unknown">Unknown</string>
    <string name="man">Man</string>
    <string name="female">Female</string>
    <string-array name="choose_picture_way">
        <item>Take A Photo</item>
        <item>Your Picture</item>
        <item>Your Album</item>
    </string-array>
    <string name="action_save">Save</string>

    <string name="change_info">Change Base Info</string>

    <string-array name="change_info">
        <item>Change Your Nick Name</item>
        <item>Change Your Email</item>
        <item>Change Your Sex</item>
        <item>Change Your Residence</item>
        <item>Change Your Birthday</item>
    </string-array>

    <string name="visitor">visitor</string>
    <string name="top">top</string>
    <string name="comment">comment</string>
    <string name="logout">Sign out</string>
    <string name="following">Following</string>

    <string name="title_activity_detial">detail</string>
    <string name="reply">reply</string>
    <string name="errormsg">Connect error, please try again</string>
    <string name="netstatcmsg">No network, please figure out</string>
    <string name="successmsg">Successful</string>
    <string-array name="headerarray">
        <item>recent</item>
        <item>friends</item>
        <item>hot</item>
        <item>search</item>
    </string-array>
</resources>
