<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/brief_intro_margin"
        android:layout_marginRight="@dimen/brief_intro_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/brief_connections_intro_title"
            android:textSize="@dimen/brief_intro_title"
            android:textColor="@android:color/black"
            android:text="@string/connections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/follower_num"
                android:layout_marginLeft="@dimen/brief_intro_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bulgarian_blue"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/follower_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/brief_follow_height"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/following_num"
                android:textColor="@color/bulgarian_blue"
                android:layout_marginLeft="@dimen/brief_intro_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/following_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/brief_follow_height"></LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>